🐛 Fixes spacing issue in aboutMe

--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 55vw;
 
     img {
         border-radius: 42px;
